--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/8f16afd41eae6f1576d69ccfd99dd913'/></h2>
-Unlocked       21/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 159 points<br>
+Unlocked       21/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 164 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -59,6 +59,7 @@ Unlocked       21/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Historian (Level 5)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Historian (Level 6)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
+<li><div class="title">Seamstress (Level 4)</div>  <div class="info">amended a commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a> --amend.</div></li>
 <li><div class="title">Socialite (Level 4)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Socialite (Level 5)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Stone Mason (Level 4)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
@@ -67,23 +68,23 @@ Unlocked       21/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-  94 log
-  93 status
-  45 commit
-  42 checkout
-  33 add
+ 112 log
+ 102 status
+  59 commit
+  44 checkout
+  37 add
   32 push
+  24 branch
+  20 diff
   19 rebase
-  19 branch
   17 cherry-pick
   14 stash
+  14 show
   14 reset
-  13 diff
   12 remote
-  10 show
    7 fetch
    6 revert
-   4 init
+   5 init
    4 config
    4 clean
    3 rm
