--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Sam Cole's Git Achievements <img src='http://www.gravatar.com/avatar/339fea82da1b99beda1eb7b67cc72e1a'/></h2>
-Unlocked       22/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 238 points<br>
+Unlocked       23/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 240 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -35,6 +35,7 @@ Unlocked       22/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Historian (Level 3)</div>  <div class="info">Investigate the commit log using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-log.html">git-log</a>.</div></li>
 <li><div class="title">Apprentice Merchant (Level 1)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Apprentice Merchant (Level 2)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
+<li><div class="title">Apprentice Plumber (Level 1)</div>  <div class="info">Use the internal plumbing commands of git.</div></li>
 <li><div class="title">Apprentice Presenter (Level 1)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Apprentice Presenter (Level 2)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
 <li><div class="title">Apprentice Presenter (Level 3)</div>  <div class="info">Shows one or more objects (blobs, trees, tags and commits) with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-show.html">git-show</a></div></li>
@@ -81,17 +82,17 @@ Unlocked       22/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
- 314 log
- 229 status
- 218 commit
- 104 diff
-  93 checkout
-  87 add
-  63 branch
+ 341 log
+ 245 status
+ 231 commit
+ 105 diff
+ 100 checkout
+  99 add
+  74 branch
+  49 rebase
   43 push
-  35 rebase
   33 show
-  23 reset
+  24 reset
   23 config
   17 cherry-pick
   16 stash
@@ -101,11 +102,12 @@ Git commands sorted by usage:
    8 init
    8 fetch
    6 revert
+   5 reflog
    5 clean
-   3 reflog
    3 pull
    3 mv
    3 help
+   2 update-ref
    2 --help
    1 sun
    1 ls
@@ -147,7 +149,6 @@ There are       51 Achievements. Some achievements can be leveled up depending o
 <li><div class="title">News Reader</div><div class="info">Show logs with difference each commit introduces with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-whatchanged.html">git-whatchanged</a></div></li>
 <li><div class="title">Pedantic</div><div class="info">Use the flow extension to encourage an orderly and standardized branching model</div></li>
 <li><div class="title">Pilgrim</div><div class="info">Performed a rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> --onto.</div></li>
-<li><div class="title">Plumber</div><div class="info">Use the internal plumbing commands of git.</div></li>
 <li><div class="title">Postman</div><div class="info">Send a collection of patches from stdin to an IMAP folder with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-imap-send.html">git-imap-send</a></div></li>
 <li><div class="title">Stamp Collector</div><div class="info">Investigate old branches by using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-reflog.html">git-reflog</a> --date=relative</div></li>
 <li><div class="title">Traveler</div><div class="info">Streamed changes between another rcs with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-svn.html">git-svn</a> or <a href="http://www.kernel.org/pub/software/scm/git/docs/git-p4.html">git-p4</a>.</div></li>
